--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -42,9 +42,9 @@ jobs:
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)\/(\w+)(\.master)?$/,'$2')
             } else if ( "${{ github.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?$/) ) { // push to production branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?$/,'$2')
-            } else if ("${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\/(\w+)(\.master)?\/pr-\d+-\w+$/)) { // merge queue to development branch case
+            } else if ( "${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\/(\w+)(\.master)?\/pr-\d+-\w+$/) ) { // merge queue to development branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\/(\w+)(\.master)?\/pr-\d+-\w+$/, '$2');
-            } else if ("${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?\/pr-\d+-\w+$/)) { // merge queue to production branch case
+            } else if ( "${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?\/pr-\d+-\w+$/) ) { // merge queue to production branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?\/pr-\d+-\w+$/, '$2');
             } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)\/(\w+)(\.master)?$/) ) { // pr to development branch case
               return "${{ github.event.pull_request.base.ref }}".replace(/^(eol|openuchile|vlabx)\/(\w+)(\.master)?$/,'$2')
@@ -62,10 +62,10 @@ jobs:
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)\/.+$/,'$1')
             } else if ( "${{ github.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)-release\//) ) { // push to production branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)-release\/.+$/,'$1')
-            } else if ("${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\/pr-\d+-\w+$/)) { // merge queue to development branch case
-              return "${{ github.ref }}".replace(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\/pr-\d+-\w+$/, '$1');
-            } else if ("${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\/(\w+)\/pr-\d+-\w+$/)) { // merge queue to production branch case
-              return "${{ github.ref }}".replace(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\/(\w+)\/pr-\d+-\w+$/, '$1');
+            } else if ( "${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\//) ) { // merge queue to development branch case
+              return "${{ github.ref }}".replace(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)\/.+$/, '$1');
+            } else if ( "${{ github.ref }}".match(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\//) ) { // merge queue to production branch case
+              return "${{ github.ref }}".replace(/^refs\/heads\/gh-readonly-queue\/(eol|openuchile|vlabx)-release\/.+$/, '$1');
             } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)\//) ) { // pr to development branch case
               return "${{ github.event.pull_request.base.ref }}".replace(/^(eol|openuchile|vlabx)\/.+$/,'$1')
             } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)-release\//) ) { // pr to production branch case
