--- a/.github/workflows/upgrade-one-python-dependency.yml
+++ b/.github/workflows/upgrade-one-python-dependency.yml
@@ -4,22 +4,22 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Target branch to create requirements PR against'
+        description: "Target branch to create requirements PR against"
         required: true
-        default: 'master'
+        default: "master"
         type: string
       package:
-        description: 'Name of package to upgrade'
+        description: "Name of package to upgrade"
         required: true
         type: string
       version:
-        description: 'Version number to upgrade to in constraints.txt (only needed if pinned)'
-        default: ''
+        description: "Version number to upgrade to in constraints.txt (only needed if pinned)"
+        default: ""
         type: string
       change_desc:
         description: |
           Description of change, for commit message and PR. (What does the new version add or fix?)
-        default: ''
+        default: ""
         type: string
 
 defaults:
