--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -115,9 +115,8 @@ jobs:
   success:
     name: Unit tests successful
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    needs:
-      - run-tests
-    runs-on: ubuntu-latest
+    runs-on: [ "ubuntu-20.04" ]
+    needs: [ run-tests ]
     steps:
       - name: Decide whether the needed jobs succeeded or failed
         # uses: re-actors/alls-green@v1.2.1
@@ -126,6 +125,7 @@ jobs:
           jobs: ${{ toJSON(needs) }}
 
   compile-warnings-report:
+    if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
     runs-on: [ "ubuntu-20.04" ]
     needs: [ run-tests ]
     steps:
@@ -154,8 +154,9 @@ jobs:
 
   # Combine and upload coverage reports.
   coverage:
-    needs: run-tests
-    runs-on: ubuntu-latest
+    if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
+    runs-on: [ "ubuntu-20.04" ]
+    needs: [ run-tests ]
     strategy:
       matrix:
         python-version:
