--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,12 +7,12 @@ on:
       - master
 
 env:
-  RUNNER: "ubuntu-20.04"
+  runner: "ubuntu-20.04"
 
 jobs:
   run-tests:
     name: ${{ matrix.shard_name }}(py=${{ matrix.python-version }},dj=${{ matrix.django-version }},mongo=${{ matrix.mongo-version }})
-    runs-on: ${{ env.RUNNER }}
+    runs-on: ${{ github.env.runner }}
     strategy:
       matrix:
         python-version:
@@ -115,7 +115,7 @@ jobs:
   # https://github.com/orgs/community/discussions/33579
   success:
     name: Unit tests successful
-    runs-on: ${{ env.RUNNER }}
+    runs-on: ${{ github.env.runner }}
     needs: [ run-tests ]
     steps:
       - name: Decide whether the needed jobs succeeded or failed
@@ -125,7 +125,7 @@ jobs:
           jobs: ${{ toJSON(needs) }}
 
   compile-warnings-report:
-    runs-on: ${{ env.RUNNER }}
+    runs-on: ${{ github.env.runner }}
     needs: [ run-tests ]
     steps:
       - uses: actions/checkout@v4
@@ -154,7 +154,7 @@ jobs:
   # Combine and upload coverage reports.
   coverage:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    runs-on: ${{ env.RUNNER }}
+    runs-on: ${{ github.env.runner }}
     needs: [ run-tests ]
     strategy:
       matrix:
