--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -107,6 +107,26 @@ jobs:
           path: reports/${{matrix.shard_name}}.coverage
           overwrite: true
 
+  collect-and-verify:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: install system requirements
+        run: |
+          make ubuntu-requirements
+
+      - name: install requirements
+        run: |
+          make test-requirements
+
+      - name: verify unit tests count
+        uses: ./.github/actions/verify-tests-count
+
   # This job aggregates test results. It's the required check for branch protection.
   # https://github.com/marketplace/actions/alls-green#why
   # https://github.com/orgs/community/discussions/33579
