feat: temporarily prevent renovate from updating this package
Minor (and therefore presumed-safe by renovate) version updates caused
an exception on some deprecated code. Marking this package as not-safe
for renovate until that code is removed, which  will happen quite soon.
see external (2U) ticket REV-4067 for details. cc @julianajlk

FIXES: APER-3502

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,6 +28,7 @@
       "automerge": true
     }
   ],
+  "ignoreDeps": ["moment-timezone"],
   "timezone": "America/New_York",
   "prConcurrentLimit": 3,
   "enabledManagers": ["npm"]
