--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -29,6 +29,10 @@
     }
   ],
   "ignoreDeps": ["moment-timezone"],
+  "__Open_edX_ignoreDeps_reasons__": {
+    "__note__": "When you add a package to ignoreDeps, add a comment to this object, using the package name as the key, and the comment as the value.",
+    "moment-timezone": "Broke legacy programs dashboard, which is deprecated and soon to be removed. See https://github.com/openedx/edx-platform/pull/34928"
+  },
   "timezone": "America/New_York",
   "prConcurrentLimit": 3,
   "enabledManagers": ["npm"]
