--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,14 +12,6 @@ jobs:
   push:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        variant:
-          - "lms_dev"
-          - "cms_dev"
-          - "cms"
-          - "lms"
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,8 +28,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and push lms base docker image
+      - name: Build and push lms/cms base docker images
         env:
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: make docker_tag_build_push_${{matrix.variant}}
+        run: make docker_build
