--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches:
       - master
-      - edxapp-docker-python311-upgrade
 
 jobs:
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     runs-on: ubuntu-latest
-  
+    if: github.event_name == 'push'
+
     strategy:
       matrix:
         variant:
