--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        node-version: [18]
+        node-version: [18, 20]
         python-version:
           - "3.11"
 
