--- a/.github/workflows/static-assets-check.yml
+++ b/.github/workflows/static-assets-check.yml
@@ -15,7 +15,7 @@ jobs:
         os: [ubuntu-20.04]
         python-version:
           - "3.11"
-        node-version: [18]
+        node-version: [18, 20]
         npm-version: [10.5.x]
         mongo-version:
           - "7.0"
