chore: test commit

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -17,6 +17,7 @@ jobs:
         python-version:
           - "3.11"
         node-version: [18]
+        toxenv: [quality]
 
     steps:
       - uses: actions/checkout@v4
@@ -67,6 +68,7 @@ jobs:
           SCRIPT_TO_RUN: ./scripts/generic-ci-tests.sh
           PIP_SRC: ${{ runner.temp }}
           TARGET_BRANCH: ${{ github.base_ref }}
+          TOX_ENV: ${{ matrix.toxenv }}
         run: |
           ./scripts/all-tests.sh
 
