--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -69,8 +69,8 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
           TARGET_BRANCH: ${{ github.base_ref }}
           TOX_ENV: ${{ matrix.toxenv }}
-        run: |
-          ./scripts/all-tests.sh
+        run: pycodestyle . | tee pycodestyle-report.txt
+          
 
       - name: Save Job Artifacts
         if: always()
