--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -69,7 +69,7 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
           TARGET_BRANCH: ${{ github.base_ref }}
           TOX_ENV: ${{ matrix.toxenv }}
-        run: pycodestyle . | tee pycodestyle-report.txt
+        run: python quality_test.py
           
 
       - name: Save Job Artifacts
