--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -69,7 +69,7 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
           TARGET_BRANCH: ${{ github.base_ref }}
           TOX_ENV: ${{ matrix.toxenv }}
-        run: make pep8_test
+        run: make quality
           
 
       - name: Save Job Artifacts
