--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install dependencies
         run: npm install  
 
+      - name: Run ESLint
+        run: npx eslint . --ext .js,.jsx  
+
       - name: Get pip cache dir
         id: pip-cache-dir
         run: |
