--- a/requirements/edx/bundled.in
+++ b/requirements/edx/bundled.in
@@ -41,7 +41,7 @@ crowdsourcehinter-xblock
 done-xblock                         # a very simple XBlock that allows learners to mark an activity as Done
 recommender-xblock                  # https://github.com/edx/RecommenderXBlock
 staff-graded-xblock                 # https://github.com/openedx/staff_graded-xblock Allows off-site bulk scoring.
-edx-sga                             # The more well known "staff graded assignment" XBlock, from MIT.
+#edx-sga                             # The more well known "staff graded assignment" XBlock, from MIT.
 ora2>=4.5.0                         # Open Response Assessment XBlock
 xblock-poll                         # Xblock for polling users
 xblock-drag-and-drop-v2             # Drag and Drop XBlock
