chore: test code

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -63,12 +63,6 @@ jobs:
       
       - name: Clear npm cache
         run: npm cache clean --force
-      
-      - name: npm install command 
-        run: npm install
-      
-      - name: List node_modules/.bin
-        run: ls -la node_modules/.bin  
 
       - name: Run Quality Tests
         env:
@@ -77,6 +71,7 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
           TARGET_BRANCH: ${{ github.base_ref }}
         run: |
+          npm install
            ./scripts/all-tests.sh
       
       - name: Save Job Artifacts
