--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -63,6 +63,9 @@ jobs:
       
       - name: Run Python Quality Tests
         run: pycodestyle .
+      
+      - name: Run Eslint Tests
+        run: make test-eslint
 
       - name: Run Quality Tests
         env:
