--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -66,7 +66,7 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
         run: npm ci  
 
-      - name: Run Python Quality Tests
+      - name: Run Python Quality Test
         run: pycodestyle .
       
       - name: Run Eslint Tests
