chore: fix tests

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -67,7 +67,9 @@ jobs:
         run: npm ci  
 
       - name: Run Python Quality Test
-        run: pycodestyle .
+        env:
+          PIP_SRC: ${{ runner.temp }}
+        run: make test-lint
       
       - name: Run Stylelint Tests
         env:
