--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -67,6 +67,7 @@ jobs:
         run: npm ci  
 
       - name: Run Python Quality Test
+        working-directory: ${{ github.workspace }}
         env:
           PIP_SRC: ${{ runner.temp }}
         run: make test-lint
