chore: replacing paver script

--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -66,21 +66,21 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
         run: npm ci  
 
-      - name: Run Python Quality Test
-        working-directory: ${{ github.workspace }}
-        env:
-          PIP_SRC: ${{ runner.temp }}
-        run: make test-lint
+      # - name: Run Python Quality Test
+      #   working-directory: ${{ github.workspace }}
+      #   env:
+      #     PIP_SRC: ${{ runner.temp }}
+      #   run: make test-lint
       
-      - name: Run Stylelint Tests
-        env:
-          PIP_SRC: ${{ runner.temp }}
-        run: make test-stylelint  
+      # - name: Run Stylelint Tests
+      #   env:
+      #     PIP_SRC: ${{ runner.temp }}
+      #   run: make test-stylelint  
       
-      - name: Run Eslint Tests
-        env:
-          PIP_SRC: ${{ runner.temp }}
-        run: make test-eslint
+      # - name: Run Eslint Tests
+      #   env:
+      #     PIP_SRC: ${{ runner.temp }}
+      #   run: make test-eslint
 
       - name: Run Quality Tests
         env:
