--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -65,7 +65,13 @@ jobs:
         env:
           PIP_SRC: ${{ runner.temp }}
         run: npm ci  
-
+      
+      - name: Install python packages
+        env:
+          PIP_SRC: ${{ runner.temp }}
+        run: |
+            pip install -e .
+      
       # - name: Run Python Quality Test
       #   working-directory: ${{ github.workspace }}
       #   env:
@@ -89,7 +95,11 @@ jobs:
           PIP_SRC: ${{ runner.temp }}
           TARGET_BRANCH: ${{ github.base_ref }}
         run: |
-           ./scripts/all-tests.sh
+            make test-lint
+            make test-eslint
+            make test-stylelint
+            make test-xsslint
+            ./scripts/all-tests.sh
           
       - name: Save Job Artifacts
         if: always()
