fix: get unit tests to run

--- a/.github/workflows/units-test-scripts-user-retirement.yml
+++ b/.github/workflows/units-test-scripts-user-retirement.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update && sudo apt-get install libxmlsec1-dev
           python -m pip install --upgrade pip
           pip install -r scripts/user_retirement/requirements/testing.txt
 
