--- a/.github/workflows/units-test-scripts-user-retirement.yml
+++ b/.github/workflows/units-test-scripts-user-retirement.yml
@@ -31,4 +31,5 @@ jobs:
 
       - name: Run pytest
         run: |
+          export DJANGO_SETTINGS_MODULE=lms.envs.test
           pytest scripts/user_retirement
