--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -65,12 +65,9 @@ jobs:
 
       - uses: c-hive/gha-npm-cache@v1
       - name: Run JS Tests
-        env:
-          TEST_SUITE: js-unit
-          SCRIPT_TO_RUN: ./scripts/generic-ci-tests.sh
         run: |
           npm install -g jest
-          xvfb-run --auto-servernum ./scripts/all-tests.sh
+          make test-js
 
       - name: Save Job Artifacts
         uses: actions/upload-artifact@v4
