chore: replace paver js tests

--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -64,6 +64,10 @@ jobs:
           make base-requirements
 
       - uses: c-hive/gha-npm-cache@v1
+
+      - name: Install npm
+        run: npm ci  
+
       - name: Run JS Tests
         run: |
           npm install -g jest
