--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -66,9 +66,13 @@ jobs:
       - uses: c-hive/gha-npm-cache@v1
 
       - name: Install npm
+        env:
+          PIP_SRC: ${{ runner.temp }}
         run: npm ci  
 
       - name: Run JS Tests
+        env:
+          PIP_SRC: ${{ runner.temp }}
         run: |
           npm install -g jest
           make test-js
