--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -117,7 +117,9 @@ olxcleaner
 openedx-atlas                       # CLI tool to manage translations
 openedx-calc                        # Library supporting mathematical calculations for Open edX
 openedx-django-require
-openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
+# openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
+# TODO: Remove this once new version released
+openedx-events @ git+https://github.com/open-craft/openedx-events.git@8101eb46d15717e7d5390af0901b8314a2c7da25
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
 openedx-learning                    # Open edX Learning core (experimental)
 openedx-mongodbproxy
