--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -119,8 +119,7 @@ openedx-calc                        # Library supporting mathematical calculatio
 openedx-django-require
 openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
-# FIXME Remove this line after release of openedx-learning
-openedx-learning  @ git+https://github.com/open-craft/openedx-learning@navin/update-collections-api                   # Open edX Learning core (experimental)
+openedx-learning                    # Open edX Learning core (experimental)
 openedx-mongodbproxy
 openedx-django-wiki
 path
