--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "@edx/eslint-config": "^4.0.0",
     "@edx/mockprock": "github:openedx/mockprock#d70b05231bd46b0122616c24e209c890ef2633c0",
     "@edx/stylelint-config-edx": "2.3.3",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^12.8.3",
     "babel-jest": "29.7.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.8",
