--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -117,7 +117,7 @@ olxcleaner
 openedx-atlas                       # CLI tool to manage translations
 openedx-calc                        # Library supporting mathematical calculations for Open edX
 openedx-django-require
-openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
+openedx-events>=9.14.0                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
 git+https://github.com/open-craft/openedx-learning.git@jill/collection-key#egg=openedx-learning                    # Open edX Learning core (experimental)
 openedx-mongodbproxy
