--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -117,9 +117,7 @@ olxcleaner
 openedx-atlas                       # CLI tool to manage translations
 openedx-calc                        # Library supporting mathematical calculations for Open edX
 openedx-django-require
-# openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
-# TODO: Remove this once new version released
-openedx-events @ git+https://github.com/open-craft/openedx-events.git@yusuf-musleh/content-library-collections-signals
+openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
 openedx-learning                    # Open edX Learning core (experimental)
 openedx-mongodbproxy
