--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -81,8 +81,8 @@ jobs:
             make eslint
             make stylelint
             make xsslint
-            make pi_check
-            make check_keyword
+            make pii_check
+            make check_keywords
           
       - name: Save Job Artifacts
         if: always()
