--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -15,7 +15,7 @@ lms/djangoapps/grades/
 lms/djangoapps/instructor/
 lms/djangoapps/instructor_task/
 lms/djangoapps/mobile_api/
-openedx/core/djangoapps/commerce/                                   @openedx/2U-infinity
+openedx/core/djangoapps/commerce/                                   @openedx/2u-infinity
 openedx/core/djangoapps/credentials                                 @openedx/2U-aperture
 openedx/core/djangoapps/credit                                      @openedx/2U-aperture
 openedx/core/djangoapps/enrollments/                                @openedx/2U-aperture
@@ -23,7 +23,7 @@ openedx/core/djangoapps/heartbeat/
 openedx/core/djangoapps/oauth_dispatch
 openedx/core/djangoapps/user_api/                                   @openedx/2U-aperture
 openedx/core/djangoapps/user_authn/                                 @openedx/2U-vanguards                                 
-openedx/core/djangoapps/verified_track_content/                     @openedx/2U-infinity
+openedx/core/djangoapps/verified_track_content/                     @openedx/2u-infinity
 openedx/features/course_experience/
 xmodule/
 
@@ -42,14 +42,14 @@ common/djangoapps/course_modes/                                     @openedx/2U-
 common/djangoapps/enrollment/
 common/djangoapps/entitlements/                                     @openedx/2U-aperture
 lms/djangoapps/branding/                                            @openedx/2U-aperture
-lms/djangoapps/commerce/                                            @openedx/2U-infinity
-lms/djangoapps/experiments/                                         @openedx/2U-infinity
-lms/djangoapps/gating/                                              @openedx/2U-infinity
+lms/djangoapps/commerce/                                            @openedx/2u-infinity
+lms/djangoapps/experiments/                                         @openedx/2u-infinity
+lms/djangoapps/gating/                                              @openedx/2u-infinity
 lms/djangoapps/learner_dashboard/                                   @openedx/2U-aperture
 lms/djangoapps/learner_home/                                        @openedx/2U-aperture
-openedx/features/content_type_gating/                               @openedx/2U-infinity
+openedx/features/content_type_gating/                               @openedx/2u-infinity
 openedx/features/course_duration_limits/
-openedx/features/discounts/                                         @openedx/2U-infinity
+openedx/features/discounts/                                         @openedx/2u-infinity
 
 # Ping Axim On-call if someone uses the QuickStart
 # https://docs.openedx.org/en/latest/developers/quickstarts/first_openedx_pr.html
