Update tox.ini and GH workflows to drop python 3.8 and add 3.12

--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -14,8 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node-version: [18, 20]
-        python-version:
-          - "3.11"
+        python-version: ["3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
