--- a/.github/workflows/static-assets-check.yml
+++ b/.github/workflows/static-assets-check.yml
@@ -13,8 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version:
-          - "3.11"
+        python-version: ["3.11", "3.12"]
         node-version: [18, 20]
         npm-version: [10.5.x]
         mongo-version:
