--- a/.github/workflows/ci-static-analysis.yml
+++ b/.github/workflows/ci-static-analysis.yml
@@ -8,8 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version:
-          - "3.11"
+        python-version: ["3.11", "3.12"]
         os: ["ubuntu-latest"]
 
     steps:
