--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -18,8 +18,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest"]
-        python-version:
-          - "3.11"
+        python-version: ["3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
