--- a/requirements/edx/bundled.in
+++ b/requirements/edx/bundled.in
@@ -48,3 +48,4 @@ ora2>=4.5.0                         # Open Response Assessment XBlock
 xblock-poll                         # Xblock for polling users
 xblock-drag-and-drop-v2             # Drag and Drop XBlock
 xblock-google-drive                 # XBlock for google docs and calendar
+gevent
