--- a/scripts/xblock/requirements.txt
+++ b/scripts/xblock/requirements.txt
@@ -15,6 +15,4 @@ idna==3.10
 requests==2.32.3
     # via -r scripts/xblock/requirements.in
 urllib3==1.26.20
-    # via
-    #   -c scripts/xblock/../../requirements/constraints.txt
-    #   requests
+    # via requests
